# academic_journal_reviewer

./: .autoflake  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  DETAILED_REVIEW_ENHANCEMENT.md  Dockerfile  ERROR_FIXES.md  LANGGRAPH_MIGRATION.md  LICENSE  LINE_BY_LINE_REVIEW_IMPLEMENTATION.md  Makefile  README.md  REFACTORING_SUMMARY.md  ROUTES_INTEGRATION_SUMMARY.md  UPLOAD_COMPLETION_IMPLEMENTATION.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-run.sh  nginx.conf  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.py  run_tests.sh  setup.sh  start-backend.sh  test_api.py  test_fixes.py  test_langgraph_integration.py  test_routes_integration.py  test_system.py
app/: main.py
deployment/: .dockerignore  .dockerignore.frontend  .env.production.example  Dockerfile  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  mongo-init.js  nginx-frontend.conf  nginx.conf  tmp.Dockerfile
diagrams/: 01_high_level_architecture.mmd  admin_dashboard_architecture.mmd  admin_dashboard_components.mmd  admin_dashboard_data_flow.mmd  admin_database_schema.mmd  admin_security_flow.mmd  author_dashboard_architecture.mmd  data architecture.mmd  download_access_matrix.mmd  download_authentication_flow.mmd  download_dashboard_integration.mmd  download_database_schema.mmd  download_endpoint_flow.mmd  download_error_handling.mmd  download_permission_flow.mmd  download_sequence_diagram.mmd  editor_dashboard_components.mmd  editor_dashboard_dataflow.mmd  user flow.mmd  (+17 more)
(+152 files in other folders)
